--- a/Spice&Wok/index.html
+++ b/Spice&Wok/index.html
@@ -12,7 +12,7 @@
         <h1 id="logoname">Spice & Wok</h1>
         <div class="navbar">
             <div id="navbutton">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="menu.html">Menu</a>
                 <a href="about.html">About</a>
             </div>
@@ -104,4 +104,5 @@
         </div>
     </footer>
 </body>
+
 </html>
