--- a/Spice&Wok/checkout.html
+++ b/Spice&Wok/checkout.html
@@ -12,7 +12,7 @@
         <h2 id="logoname">Spice & Wok</h2>
         <div class="navbar">
             <div id="navbutton">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="menu.html">Menu</a>
                 <a href="about.html">About</a>
             </div>
@@ -103,4 +103,5 @@
     </div>
 </footer>
 </body>
+
 </html>
