--- a/Spice&Wok/about.html
+++ b/Spice&Wok/about.html
@@ -13,7 +13,7 @@
         <h1 id="logoname">Spice & Wok</h1>
         <div class="navbar">
             <div id="navbutton">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="menu.html">Menu</a>
                 <a href="about.html">About</a>
             </div>
@@ -118,4 +118,5 @@
     </div>
 </footer>
 </body>
+
 </html>
